# Hackathon-GCP

./: README.md  mushroom_predictor.html  pyproject.toml
api/: Dockerfile  label_encoders.pkl  main.py  model.pkl  predict.py  pyproject.toml  run.sh  train.py
notebook/: model.pkl  predict.ipynb  train.ipynb
ui/: streamlit_app.py
