[project]
name = "hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "mariasilvia"}
]
readme = "README.md"
requires-python = "3.10.4"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "gradio (>=5.25.0,<6.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
